syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.rps";
option java_outer_classname = "RpsProto";

package rps;

enum Move {
  NAO_ESPECIFICADO = 0;
  PEDRA = 1;
  PAPEL = 2;
  TESOURA = 3;
}

message PlayRequest {
  Move playerMove = 1;
}

message PlayResponse {
  Move serverMove = 1;
  string result = 2;
}

service RpsGame {
  rpc Play (PlayRequest) returns (PlayResponse);
}